
Enum "app_user_role" {
  "owner"
  "admin"
  "member"
}

Enum "app_user_status" {
  "pending"
  "active"
  "suspended"
}

Enum "category" {
  "tolls/parking"
  "hotel"
  "transport"
  "fuel"
  "meals"
  "phone"
  "supplies"
  "misc"
}

Enum "receipt_status" {
  "pending"
  "ocr_processing"
  "ocr_complete"
  "extracting"
  "complete"
  "failed"
}

Table "accounts" {
  "id" uuid [pk, default: `gen_random_uuid()`]
  "account_id" text [not null]
  "provider_id" text [not null]
  "user_id" uuid [not null]
  "access_token" text
  "refresh_token" text
  "id_token" text
  "access_token_expires_at" timestamp
  "refresh_token_expires_at" timestamp
  "scope" text
  "password" text
  "created_at" timestamp [not null, default: `now()`]
  "updated_at" timestamp [not null]

  Indexes {
    id [unique, name: "accounts_pkey"]
    user_id [name: "accounts_userId_idx"]
  }
}

Table "expense_report_jobs_table" {
  "id" uuid [pk, default: `gen_random_uuid()`]
  "user_id" uuid [not null]
  "title" text [not null, default: 'Expense report']
  "created_at" timestamp [not null, default: `now()`]
  "updated_at" timestamp [not null, default: `now()`]

  Indexes {
    id [unique, name: "expense_report_jobs_table_pkey"]
  }
}

Table "extracted_expenses_table" {
  "id" uuid [pk, default: `gen_random_uuid()`]
  "receipt_id" uuid [not null]
  "merchant" text
  "description" text
  "date" date
  "amount" numeric(10,2) [not null]
  "category" category [not null]
  "transport_details" jsonb
  "raw_json" jsonb
  "model_version" text [not null]
  "is_current" boolean [not null, default: true]
  "created_at" timestamp [not null, default: `now()`]
  "updated_at" timestamp [not null, default: `now()`]
  "ocr_result_id" uuid

  Indexes {
    id [unique, name: "extracted_expenses_table_pkey"]
    receipt_id [unique, name: "uniq_active_receipt"]
  }
}

Table "ocr_results_table" {
  "id" uuid [pk, default: `gen_random_uuid()`]
  "receipt_id" uuid [not null]
  "extracted_text" jsonb [not null]
  "provider" text
  "confidence" numeric(5,2)
  "created_at" timestamp [not null, default: `now()`]

  Indexes {
    id [unique, name: "ocr_results_table_pkey"]
  }
}

Table "receipt_files_table" {
  "id" uuid [pk, default: `gen_random_uuid()`]
  "job_id" uuid [not null]
  "s3_key" text [not null]
  "original_filename" text
  "status" receipt_status [not null, default: 'pending']
  "error_message" text
  "created_at" timestamp [not null, default: `now()`]
  "updated_at" timestamp [not null, default: `now()`]
  "ocr_completed_at" timestamp
  "ocr_started_at" timestamp
  "extraction_started_at" timestamp
  "extraction_completed_at" timestamp

  Indexes {
    id [unique, name: "receipt_files_table_pkey"]
  }
}

Table "sessions" {
  "id" uuid [pk, default: `gen_random_uuid()`]
  "expires_at" timestamp [not null]
  "token" text [unique, not null]
  "created_at" timestamp [not null, default: `now()`]
  "updated_at" timestamp [not null]
  "ip_address" text
  "user_agent" text
  "user_id" uuid [not null]
  "impersonated_by" text

  Indexes {
    id [unique, name: "sessions_pkey"]
    token [unique, name: "sessions_token_unique"]
    user_id [name: "sessions_userId_idx"]
  }
}

Table "users" {
  "id" uuid [pk, default: `gen_random_uuid()`]
  "name" text [not null]
  "email" text [unique, not null]
  "email_verified" boolean [not null, default: false]
  "image" text
  "created_at" timestamp [not null, default: `now()`]
  "updated_at" timestamp [not null, default: `now()`]
  "role" text
  "banned" boolean [default: false]
  "ban_reason" text
  "ban_expires" timestamp

  Indexes {
    email [unique, name: "users_email_unique"]
    id [unique, name: "users_pkey"]
  }
}

Table "verifications" {
  "id" uuid [pk, default: `gen_random_uuid()`]
  "identifier" text [not null]
  "value" text [not null]
  "expires_at" timestamp [not null]
  "created_at" timestamp [not null, default: `now()`]
  "updated_at" timestamp [not null, default: `now()`]

  Indexes {
    identifier [name: "verifications_identifier_idx"]
    id [unique, name: "verifications_pkey"]
  }
}

Ref "accounts_user_id_users_id_fk":"users"."id" < "accounts"."user_id" [delete: cascade]

Ref "expense_report_jobs_table_user_id_users_id_fk":"users"."id" < "expense_report_jobs_table"."user_id" [delete: cascade]

Ref "extracted_expenses_table_ocr_result_id_ocr_results_table_id_fk":"ocr_results_table"."id" < "extracted_expenses_table"."ocr_result_id" [delete: set null]

Ref "extracted_expenses_table_receipt_id_receipt_files_table_id_fk":"receipt_files_table"."id" < "extracted_expenses_table"."receipt_id" [delete: cascade]

Ref "ocr_results_table_receipt_id_receipt_files_table_id_fk":"receipt_files_table"."id" < "ocr_results_table"."receipt_id" [delete: cascade]

Ref "receipt_files_table_job_id_expense_report_jobs_table_id_fk":"expense_report_jobs_table"."id" < "receipt_files_table"."job_id" [delete: cascade]

Ref "sessions_user_id_users_id_fk":"users"."id" < "sessions"."user_id" [delete: cascade]

Table "drizzle"."__drizzle_migrations" {
  "id" serial [pk, increment]
  "hash" text [not null]
  "created_at" bigint

  Indexes {
    id [unique, name: "__drizzle_migrations_pkey"]
  }
}

Table "neon_control_plane"."endpoints" {
  "endpoint_id" varchar(255) [pk]
  "allowed_ips" varchar(255)

  Indexes {
    endpoint_id [unique, name: "endpoints_pkey"]
  }
}
